--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheoLib Admin - Restored Control</title>
+    <title>TheoLib Admin - Master Control</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -12,6 +12,8 @@
         :root { --blue: #3b82f6; --orange: #f97316; --green: #10b981; --purple: #a855f7; --bg: #0b1120; --card-bg: #1e293b; --text-main: #f8fafc; --text-sub: #94a3b8; --border: #334155; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 20px; color: var(--text-main); }
         #auth-overlay { position: fixed; inset: 0; background: var(--bg); z-index: 5000; display: flex; align-items: center; justify-content: center; }
+        .login-card { background: var(--card-bg); padding: 30px; border-radius: 24px; width: 100%; max-width: 350px; text-align: center; border: 1px solid var(--border); }
+        .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 15px; outline: none; box-sizing: border-box; }
         .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; overflow-x: auto; }
         .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: var(--card-bg); color: var(--text-sub); border: 1px solid var(--border); transition: 0.3s; }
         .tab-btn.active { background: var(--blue); color: white; }
@@ -74,7 +76,7 @@
             const list = document.getElementById('inventory-list'); list.innerHTML = "";
             snap.forEach(doc => {
                 const b = doc.data(); const id = doc.id;
-                list.innerHTML += `<tr><td><b>${b.title}</b></td><td style="position:relative;"><button class="btn-sm" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">...</div></td><td><button class="btn-sm" onclick="toggleM('c-${id}')">Cat</button></td><td><button onclick="deletePDF('${id}')">🗑️</button></td></tr>`;
+                list.innerHTML += `<tr><td><b>${b.title}</b></td><td style="position:relative;"><button class="btn-sm" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">...</div></td><td><button class="btn-sm" onclick="toggleM('c-${id}')">Cat</button></td><td><button class="btn-sm" onclick="toggleM('p-${id}')">Promo</button></td><td><button onclick="deletePDF('${id}')">🗑️</button></td></tr>`;
             });
         });
     }
@@ -91,8 +93,9 @@
     async function openReport(uid, name) { activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = name; fetchUsageData(); }
 
     async function fetchUsageData() {
-        document.getElementById('log-body').innerHTML = "<tr><td colspan='4'>Bypassing Cache...</td></tr>";
-        const logs = await db.collection("activity_logs").where("userId", "==", activeUID).get({ source: 'server' });
+        document.getElementById('log-body').innerHTML = "<tr><td colspan='4'>Hard Syncing Server...</td></tr>";
+        // FIXED: Added orderBy("startTime", "desc") for correct order
+        const logs = await db.collection("activity_logs").where("userId", "==", activeUID).orderBy("startTime", "desc").limit(100).get({ source: 'server' });
         let total = 0, online = 0, borrow = 0, html = "";
         logs.forEach(l => { 
             const d = l.data(); const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
@@ -106,7 +109,8 @@
     }
 
     async function downloadCSV() {
-        const snap = await db.collection("activity_logs").where("userId", "==", activeUID).get();
+        // FIXED: Added orderBy("startTime", "desc") for CSV order
+        const snap = await db.collection("activity_logs").where("userId", "==", activeUID).orderBy("startTime", "desc").get();
         let t = 0, o = 0, b = 0, rows = "Activity,Start,End,Duration\n";
         snap.forEach(l => { 
             const d = l.data(); const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
