--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheoLib Admin - Master Control</title>
+    <title>TheoLib Admin - Full Master Control</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -14,15 +14,18 @@
         #auth-overlay { position: fixed; inset: 0; background: var(--bg); z-index: 5000; display: flex; align-items: center; justify-content: center; }
         .login-card { background: var(--card-bg); padding: 30px; border-radius: 24px; width: 100%; max-width: 350px; text-align: center; border: 1px solid var(--border); }
         .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 15px; outline: none; box-sizing: border-box; }
-        .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; overflow-x: auto; }
-        .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: var(--card-bg); color: var(--text-sub); border: 1px solid var(--border); transition: 0.3s; }
-        .tab-btn.active { background: var(--blue); color: white; }
+        .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; overflow-x: auto; padding-bottom: 10px; }
+        .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: var(--card-bg); color: var(--text-sub); border: 1px solid var(--border); transition: 0.3s; white-space: nowrap; }
+        .tab-btn.active { background: var(--blue); color: white; border-color: var(--blue); }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 25px; border: 1px solid var(--border); margin-bottom: 20px; }
         table { width: 100%; border-collapse: collapse; }
+        th { text-align: left; padding: 12px; color: var(--text-sub); font-size: 11px; text-transform: uppercase; border-bottom: 1px solid var(--border); }
         td { padding: 15px 12px; border-bottom: 1px solid var(--border); font-size: 13px; }
         .btn-sm { padding: 8px 15px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; }
-        .dropdown-menu { display: none; position: absolute; background: var(--card-bg); border: 1px solid var(--border); border-radius: 12px; z-index: 100; min-width: 180px; padding: 10px; top: 40px; }
+        .dropdown-menu { display: none; position: absolute; background: var(--card-bg); border: 1px solid var(--border); border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.5); z-index: 100; min-width: 180px; padding: 10px; top: 40px; }
         .show { display: block; }
+        .dropdown-item { padding: 8px 12px; cursor: pointer; border-radius: 6px; font-size: 12px; color: var(--text-main); }
+        .dropdown-item:hover { background: var(--blue); }
         .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 20px; }
         .stat-box { background: #0f172a; padding: 15px; border-radius: 12px; text-align: center; border: 1px solid var(--border); }
         .stat-val { font-size: 14px; font-weight: 800; color: var(--blue); display: block; }
@@ -32,7 +35,7 @@
     </style>
 </head>
 <body>
-    <div id="auth-overlay"><div style="background:var(--card-bg); padding:30px; border-radius:24px; text-align:center; border:1px solid var(--border);"><h2>Admin</h2><input type="text" id="acid" class="login-field" placeholder="Coll ID"><br><input type="password" id="apass" class="login-field" placeholder="Pass"><br><button class="btn-sm" style="background:var(--blue); color:white; width:100%; padding:15px; border-radius:12px;" onclick="login()">Login</button></div></div>
+    <div id="auth-overlay"><div class="login-card"><h2>Admin Login</h2><input type="text" id="admin-coll-id" class="login-field" placeholder="College ID"><input type="password" id="admin-pass" class="login-field" placeholder="Password"><button class="btn-sm" style="background:var(--blue); color:white; width:100%; padding:15px; border-radius:12px;" onclick="handleAdminLogin()">Login</button></div></div>
     
     <div id="master-panel" class="hidden">
         <div class="nav-tabs">
@@ -43,23 +46,31 @@
             <button class="tab-btn" style="background:#ef4444; color:white; margin-left:auto;" onclick="location.reload()">Logout</button>
         </div>
 
-        <div id="inv-section" class="glass-card"><table><thead><tr><th>Title</th><th>Access</th><th>Cat</th><th>Action</th></tr></thead><tbody id="inventory-list"></tbody></table></div>
-        <div id="nom-section" class="hidden glass-card"><h2>📥 Nominations</h2><div id="nomination-list"></div></div>
-        <div id="mem-section" class="hidden glass-card"><select id="mon-coll" onchange="loadCollegeStudents(this.value)"><option value="">Select College</option><option value="IMC26">IMC26</option><option value="ASLIN26">ASLIN26</option></select><div id="user-folders-list" style="margin-top:20px;"></div></div>
-        <div id="stud-section" class="hidden glass-card"><h2>📤 Bulk</h2><textarea id="bulk-input" class="login-field" style="height:100px;"></textarea><button class="btn-sm" style="background:var(--blue); color:white;" onclick="processBulk()">Upload</button></div>
+        <div id="inv-section" class="glass-card">
+            <table><thead><tr><th>Resource</th><th>Access</th><th>Category</th><th>Promo</th><th>Delete</th></tr></thead><tbody id="inventory-list"></tbody></table>
+        </div>
+
+        <div id="nom-section" class="hidden glass-card"><h2>📥 Faculty Nominations</h2><div id="nomination-list"></div></div>
+
+        <div id="mem-section" class="hidden glass-card">
+            <select id="mon-coll" onchange="loadCollegeStudents(this.value)" class="login-field" style="max-width:250px;"><option value="">Select College</option><option value="IMC26">IMC26</option><option value="ASLIN26">ASLIN26</option></select>
+            <div id="user-folders-list"></div>
+        </div>
+
+        <div id="stud-section" class="hidden glass-card"><h2>📤 Bulk Member Registration</h2><textarea id="bulk-input" class="login-field" style="height:150px;" placeholder="Name, CollID, ID, Pass, Role"></textarea><button class="btn-sm" style="background:var(--blue); color:white; width:100%;" onclick="processBulk()">Bulk Upload</button></div>
     </div>
 
     <div id="user-modal" class="hidden">
         <div class="modal-content">
-            <div style="display:flex; justify-content:space-between; align-items:center;">
-                <h3 id="modal-title">Student Activity Log</h3>
+            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+                <h3 id="modal-title">Student Activity</h3>
                 <div style="display:flex; gap:10px;">
-                    <button onclick="fetchUsageData()" class="btn-sm" style="background:var(--orange); color:white;">🔄 Force Sync</button>
+                    <button onclick="fetchUsageData()" class="btn-sm" style="background:var(--orange); color:white;">🔄 Refresh</button>
                     <button onclick="downloadCSV()" class="btn-sm" style="background:var(--blue); color:white;">📥 Detailed CSV</button>
                     <button onclick="closeModal()" class="btn-sm" style="background:#ef4444; color:white;">X</button>
                 </div>
             </div>
-            <div id="modal-stats" style="margin-top:20px;"></div>
+            <div id="modal-stats"></div>
             <table style="margin-top:20px;"><thead><tr><th>Type & Details</th><th>Start</th><th>End</th><th>Duration</th></tr></thead><tbody id="log-body"></tbody></table>
         </div>
     </div>
@@ -70,21 +81,35 @@
     const adminAccounts = { "aslin": "Phlagon@28", "IMC26": "IMC26@theo" };
     let activeUID = ""; let activeName = "";
 
-    function login() { const id = document.getElementById('acid').value; const p = document.getElementById('apass').value; if(adminAccounts[id]===p){document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden'); initAdmin();} }
+    function handleAdminLogin() {
+        const cid = document.getElementById('admin-coll-id').value.trim(); const pass = document.getElementById('admin-pass').value.trim();
+        if (adminAccounts[cid] === pass) { document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden'); initAdmin(); } else { alert("Denied"); }
+    }
+
     function initAdmin() {
         db.collection("library_settings").onSnapshot(snap => {
             const list = document.getElementById('inventory-list'); list.innerHTML = "";
             snap.forEach(doc => {
-                const b = doc.data(); const id = doc.id;
-                list.innerHTML += `<tr><td><b>${b.title}</b></td><td style="position:relative;"><button class="btn-sm" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">...</div></td><td><button class="btn-sm" onclick="toggleM('c-${id}')">Cat</button></td><td><button class="btn-sm" onclick="toggleM('p-${id}')">Promo</button></td><td><button onclick="deletePDF('${id}')">🗑️</button></td></tr>`;
+                const b = doc.data(); const id = doc.id; const allowed = b.allowedColleges || [];
+                list.innerHTML += `<tr>
+                    <td><b>${b.title}</b></td>
+                    <td style="position:relative;"><button class="btn-sm" style="background:var(--purple); color:white;" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','...','...')">${c}</div>`).join('')}</div></td>
+                    <td style="position:relative;"><button class="btn-sm" style="background:var(--green); color:white;" onclick="toggleM('c-${id}')">Cat</button><div id="c-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','category','Theology')">Theology</div></div></td>
+                    <td style="position:relative;"><button class="btn-sm" style="background:var(--orange); color:white;" onclick="toggleM('p-${id}')">Promo</button></td>
+                    <td><button class="btn-sm" style="background:#ef4444; color:white;" onclick="deletePDF('${id}')">🗑️</button></td>
+                </tr>`;
             });
+        });
+        db.collection("faculty_nominations").where("status","==","pending").onSnapshot(snap => {
+            const list = document.getElementById('nomination-list'); list.innerHTML = "";
+            snap.forEach(doc => { const n = doc.data(); list.innerHTML += `<div class="user-folder"><span><b>${n.bookTitle}</b> (${n.facultyName})</span><button class="btn-sm" style="background:var(--green); color:white;">Approve</button></div>`; });
         });
     }
 
     function loadCollegeStudents(cid) { 
         db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => { 
             const list = document.getElementById('user-folders-list'); list.innerHTML = ""; 
-            snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div style="padding:10px; background:#0f172a; margin-bottom:5px; cursor:pointer;" onclick='openReport("${doc.id}", "${u.fullName}")'>📂 <b>${u.fullName}</b></div>`; }); 
+            snap.forEach(doc => { const u = doc.data(); list.innerHTML += `<div class="user-folder" onclick='openReport("${doc.id}", "${u.fullName}")'>📂 <b>${u.fullName}</b></div>`; }); 
         }); 
     }
 
@@ -93,27 +118,32 @@
     async function openReport(uid, name) { activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = name; fetchUsageData(); }
 
     async function fetchUsageData() {
-        document.getElementById('log-body').innerHTML = "<tr><td colspan='4'>Hard Syncing Server...</td></tr>";
-        // FIXED: Added orderBy("startTime", "desc") for correct order
-        const logs = await db.collection("activity_logs").where("userId", "==", activeUID).orderBy("startTime", "desc").limit(100).get({ source: 'server' });
-        let total = 0, online = 0, borrow = 0, html = "";
-        logs.forEach(l => { 
-            const d = l.data(); const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
-            if(d.type === "Total App Usage") total += dur;
-            if(d.type === "Read Online") online += dur;
-            if(d.type === "Borrowed Book Reading") borrow += dur;
+        document.getElementById('log-body').innerHTML = "<tr><td colspan='4'>Loading Data...</td></tr>";
+        const snap = await db.collection("activity_logs").where("userId", "==", activeUID).get();
+        let logs = []; snap.forEach(d => logs.push(d.data()));
+        
+        // --- SAFE IN-BROWSER SORTING (No Indices Needed) ---
+        logs.sort((a, b) => b.startTime - a.startTime);
+
+        let t = 0, o = 0, b = 0, html = "";
+        logs.forEach(d => { 
+            const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+            if(d.type === "Total App Usage") t += dur;
+            if(d.type === "Read Online") o += dur;
+            if(d.type === "Borrowed Book Reading") b += dur;
             html += `<tr><td>${d.type}<br><small>${d.activity || 'N/A'}</small></td><td>${new Date(d.startTime).toLocaleString()}</td><td>${d.endTime ? new Date(d.endTime).toLocaleString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
         });
-        document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">App Usage<br><b class="stat-val">${fmt(total)}</b></div><div class="stat-box">Online Read<br><b class="stat-val">${fmt(online)}</b></div><div class="stat-box">Borrowed Read<br><b class="stat-val">${fmt(borrow)}</b></div></div>`;
+        document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(b)}</b></div></div>`;
         document.getElementById('log-body').innerHTML = html;
     }
 
     async function downloadCSV() {
-        // FIXED: Added orderBy("startTime", "desc") for CSV order
-        const snap = await db.collection("activity_logs").where("userId", "==", activeUID).orderBy("startTime", "desc").get();
+        const snap = await db.collection("activity_logs").where("userId", "==", activeUID).get();
+        let logs = []; snap.forEach(d => logs.push(d.data()));
+        logs.sort((a, b) => b.startTime - a.startTime);
         let t = 0, o = 0, b = 0, rows = "Activity,Start,End,Duration\n";
-        snap.forEach(l => { 
-            const d = l.data(); const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
+        logs.forEach(d => { 
+            const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
             if(d.type === "Total App Usage") t += dur; if(d.type === "Read Online") o += dur; if(d.type === "Borrowed Book Reading") b += dur;
             rows += `"${d.activity}",${new Date(d.startTime).toLocaleString()},${d.endTime ? new Date(d.endTime).toLocaleString() : 'Active'},${fmt(dur)}\n`; 
         });
@@ -124,6 +154,8 @@
     function closeModal() { document.getElementById('user-modal').classList.add('hidden'); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
     function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => m.id !== id ? m.classList.remove('show') : null); document.getElementById(id).classList.toggle('show'); }
+    async function deletePDF(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
+    async function processBulk() { const lines = document.getElementById('bulk-input').value.split('\n'); for(let l of lines) { const p = l.split(',').map(i=>i.trim()); if(p.length===5) await db.collection("users").add({ fullName:p[0], collegeId:p[1], studentId:p[2], password:p[3], role:p[4].toLowerCase(), createdAt: new Date().toISOString(), usageTime: 0 }); } alert("Done!"); }
 </script>
 </body>
 </html>
