--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>TheoLib - Restored Master Portal</title>
+    <title>TheoLib - Student Portal</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -13,9 +13,10 @@
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 15px; color: var(--text-main); overflow-x: hidden; }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 20px; border: 1px solid var(--border); margin-bottom: 15px; }
         .stat-card { padding: 15px; border-radius: 15px; color: white; text-align: center; cursor: pointer; }
+        .stat-card h4 { font-size: 10px; margin: 0; opacity: 0.8; text-transform: uppercase; }
         .stat-card p { font-size: 20px; margin: 5px 0 0; font-weight: 800; }
         .book-item { background: #0f172a; padding: 15px; border-radius: 15px; border: 1px solid var(--border); margin-bottom: 12px; }
-        .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; outline: none; box-sizing: border-box; }
+        .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; outline: none; box-sizing: border-box; font-family: inherit; }
         .btn-preview { background: var(--blue); color: white; border: none; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 11px; font-weight: 600; margin-top: 10px; }
         #auth-screen, #profile-overlay, #reader-overlay, #full-lib-view, #borrow-view, #search-results-overlay { position: fixed; inset: 0; z-index: 9000; background: var(--bg); display: flex; flex-direction: column; padding: 20px; overflow-y: auto; }
         .hidden { display: none !important; }
@@ -23,7 +24,7 @@
         .time-header { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 15px; }
         .time-box { background: var(--card-bg); border: 1px solid var(--border); padding: 10px; border-radius: 15px; text-align: center; }
         .time-val { font-family: monospace; font-weight: 800; font-size: 16px; }
-        .status-dot { width: 6px; height: 6px; background: var(--green); border-radius: 50%; display: inline-block; margin-right: 5px; }
+        .status-dot { width: 8px; height: 8px; background: var(--green); border-radius: 50%; display: inline-block; margin-right: 5px; }
         .paused .status-dot { background: #ef4444; }
     </style>
 </head>
@@ -64,6 +65,8 @@
                 <div class="cat-item" onclick="loadCat('Church History')">⛪ History</div>
                 <div class="cat-item" onclick="loadCat('Mission')">🌍 Mission Focus</div>
                 <div class="cat-item" onclick="loadCat('Bible Intro')">📘 Bible Intro</div>
+                <div class="cat-item" onclick="loadCat('Acts')">📜 Acts of Apostles</div>
+                <div class="cat-item" onclick="loadCat('Other Books')">📚 Other Books</div>
             </div>
         </div>
     </div>
@@ -73,16 +76,27 @@
         <div style="display:flex; height:calc(100vh - 60px);">
             <iframe id="pdf-frame" style="flex:3; height:100%; border:none;"></iframe>
             <div style="flex:1; background:var(--card-bg); border-left:1px solid var(--border); padding:15px; overflow-y:auto;">
-                <h4 style="margin-top:0;">📂 Nav</h4>
+                <h4 style="margin-top:0;">📂 Navigation</h4>
                 <div class="cat-item" onclick="closeReader(); showFullLibrary()">All Library</div>
                 <div class="cat-item" onclick="closeReader(); showBorrowView()">My Issued</div>
             </div>
         </div>
     </div>
 
-    <div id="profile-overlay" class="hidden"><div class="glass-card" style="max-width:350px; margin:auto; text-align:center;"><h2 id="prof-name">Name</h2><button onclick="toggleProfile()" class="btn-preview">Back</button><button onclick="handleLogout()" style="background:red; width:100%; margin-top:10px;" class="btn-preview">Logout</button></div></div>
-    <div id="full-lib-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📚 Library</h3><button onclick="closeView('full-lib-view')" class="btn-preview">Back</button></div><div id="full-book-list"></div></div>
-    <div id="borrow-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📥 Issued</h3><button onclick="closeView('borrow-view')" class="btn-preview">Back</button></div><div id="borrow-list"></div></div>
+    <div id="profile-overlay" class="hidden">
+        <div class="glass-card" style="max-width:350px; margin:auto; text-align:center;">
+            <h2 id="prof-name">Name</h2>
+            <div style="text-align:left; font-size:12px; margin:15px 0;">
+                <p><b>Coll ID:</b> <span id="p-coll-id"></span></p>
+                <p><b>User ID:</b> <span id="p-stud-id"></span></p>
+            </div>
+            <button onclick="toggleProfile()" class="btn-preview">Back</button>
+            <button onclick="handleLogout()" style="background:red; width:100%; margin-top:10px;" class="btn-preview">Logout</button>
+        </div>
+    </div>
+
+    <div id="full-lib-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📚 All Books</h3><button onclick="closeView('full-lib-view')" class="btn-preview">Back</button></div><div id="full-book-list"></div></div>
+    <div id="borrow-view" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center;"><h3>📥 My Issued</h3><button onclick="closeView('borrow-view')" class="btn-preview">Back</button></div><div id="borrow-list"></div></div>
     <div id="search-results-overlay" class="hidden"><div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;"><h3>🔎 Results</h3><button onclick="closeSearchView()" class="btn-preview">Back</button></div><div id="search-results-list"></div></div>
 
     <script>
@@ -92,7 +106,7 @@
         let trackingState = { activeDocId: null, type: "Total App Usage", title: "Login Session" };
 
         document.addEventListener("visibilitychange", async () => {
-            isActive = !document.hidden;
+            isActive = !document.hidden; document.getElementById('session-box').classList.toggle('paused', !isActive);
             if (!isActive) await stopTracking(); else if (currentUser) await startTracking(trackingState.type, trackingState.title);
         });
 
@@ -130,6 +144,7 @@
                 document.getElementById('top-total').innerText = snap.size;
             });
         }
+
         function listen() {
             db.collection("borrows").where("userId","==",currentUser.uid).onSnapshot(snap => {
                 const list = document.getElementById('borrow-list'); if(list) { list.innerHTML = ""; snap.forEach(doc => { const d = doc.data(); list.innerHTML += `<div class="book-item"><b>${d.title}</b><button class="btn-preview" onclick="openBorrowedPdf('${d.bookId}','${d.title}')">Open Full</button></div>`; }); }
@@ -140,14 +155,50 @@
         async function openPdf(id, title) { await stopTracking(); await startTracking("Read Online", "Preview: " + title); document.getElementById('reader-title').innerText = title; document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${window.location.origin}/public/${id}_read_online.pdf&embedded=true`; document.getElementById('reader-overlay').classList.remove('hidden'); }
         async function openBorrowedPdf(id, title) { await stopTracking(); await startTracking("Borrowed Book Reading", "Full: " + title); document.getElementById('borrow-view').classList.add('hidden'); document.getElementById('reader-title').innerText = title; document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${window.location.origin}/public/${id}.pdf&embedded=true`; document.getElementById('reader-overlay').classList.remove('hidden'); }
         async function closeReader() { await stopTracking(); await startTracking("Total App Usage", "Login Session"); document.getElementById('reader-overlay').classList.add('hidden'); document.getElementById('pdf-frame').src = ""; }
-        function showSug(v) { /* existing suggestions logic */ }
-        function triggerSearch(t) { /* existing search logic */ }
-        function loadCat(c) { const l = document.getElementById('full-book-list'); l.innerHTML = ""; collegeBooks.filter(x => x.category === c).forEach(x => { l.innerHTML += `<div class="book-item"><b>${x.title}</b><button class="btn-preview" onclick="openPdf('${x.id}','${x.title}')">Preview</button></div>`; }); showFullLibrary(); }
+
+        function showSug(v) {
+            const b = document.getElementById('search-suggestions'); if(!v.trim()){b.classList.add('hidden'); return;}
+            const f = collegeBooks.filter(x => x.title.toLowerCase().includes(v.toLowerCase()));
+            b.innerHTML = f.map(x => `<div style="padding:10px; border-bottom:1px solid var(--border); cursor:pointer;" onclick="triggerSearch('${x.title}')">${x.title}</div>`).join('');
+            b.classList.toggle('hidden', f.length === 0);
+        }
+
+        function triggerSearch(t) {
+            const q = (t || document.getElementById('lib-search').value).toLowerCase(); document.getElementById('search-suggestions').classList.add('hidden');
+            const r = collegeBooks.filter(x => x.title.toLowerCase().includes(q));
+            const l = document.getElementById('search-results-list'); l.innerHTML = "";
+            r.forEach(x => { l.innerHTML += `<div class="book-item"><b>${x.title}</b><br><button class="btn-preview" onclick="openPdf('${x.id}','${x.title}')">Read</button></div>`; });
+            document.getElementById('search-results-overlay').classList.remove('hidden');
+        }
+
+        function loadCat(c) {
+            const l = document.getElementById('full-book-list');
+            l.innerHTML = "";
+            collegeBooks.filter(x => x.category === c).forEach(x => {
+                l.innerHTML += `<div class="book-item"><b>${x.title}</b><div style="display:flex; gap:5px;"><button class="btn-preview" onclick="openPdf('${x.id}','${x.title}')">Preview</button></div></div>`;
+            });
+            showFullLibrary();
+        }
+
+        function showFullLibrary() {
+            const l = document.getElementById('full-book-list');
+            if(l.innerHTML === "") {
+                collegeBooks.forEach(x => {
+                    l.innerHTML += `<div class="book-item"><b>${x.title}</b><div style="display:flex; gap:5px;"><button class="btn-preview" onclick="openPdf('${x.id}','${x.title}')">Preview</button></div></div>`;
+                });
+            }
+            document.getElementById('full-lib-view').classList.remove('hidden');
+        }
+
         async function borrow(id, t) { if(prompt("Code:") === "BORROW2026") await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, borrowedAt: new Date().toISOString() }); }
-        function toggleProfile() { document.getElementById('profile-overlay').classList.toggle('hidden'); }
-        function showFullLibrary() { document.getElementById('full-lib-view').classList.remove('hidden'); }
+        function toggleProfile() { 
+            document.getElementById('prof-name').innerText = currentUser.fullName; 
+            document.getElementById('p-coll-id').innerText = currentUser.collegeId; 
+            document.getElementById('p-stud-id').innerText = currentUser.studentId; 
+            document.getElementById('profile-overlay').classList.toggle('hidden'); 
+        }
         function showBorrowView() { document.getElementById('borrow-view').classList.remove('hidden'); }
-        function closeView(id) { document.getElementById(id).classList.add('hidden'); }
+        function closeView(id) { document.getElementById(id).classList.add('hidden'); if(id==='full-lib-view') document.getElementById('full-book-list').innerHTML = ""; }
         function closeSearchView() { document.getElementById('search-results-overlay').classList.add('hidden'); }
     </script>
 </body>
